--- a/CSClass/CSClass.csproj
+++ b/CSClass/CSClass.csproj
@@ -43,7 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
     <Compile Include="Box.cs" />
+    <Compile Include="Cat.cs" />
+    <Compile Include="CatBase.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Fibonacci.cs" />
     <Compile Include="MyMath.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
